syntax = "proto3";

message IntegerData {
    int32 parameter = 1;
    int32 value = 2;
}

message CharacterData {
    int32 parameter = 1;
    int32 value = 2;
}

message StringData {
    int32 parameter = 1;
    string value = 2;
}

message ClientCommand {
    message Handshake {}

    message Actuator {
        int32 port = 1;

        oneof data {
            IntegerData integer = 2;
            CharacterData character = 3;
            StringData string = 4;
        }
    }

    oneof data {
        Handshake handshake = 1;
        Actuator actuator = 2;
    }
}

message ArduinoCommand {
    message Configuration {
        message PortInfo {
            enum Type {
                unknown = 0;
                inputAnalog = 1;
                inputDigital = 2;
                outputAnalog = 3;
                outputDigital = 4;
            }

            int32 port = 1;
            Type type = 2;
        }

        repeated Configuration ports = 1;
    }

    message Sensors {
        message Sensor {
            int32 port = 1;

            oneof data {
                IntegerData integer = 2;
                CharacterData character = 3;
                StringData string = 4;
            }
        }

        repeated Sensor data = 1;
    }
}
